--- a/app/src/main/res/layout/item_launcher_app.xml
+++ b/app/src/main/res/layout/item_launcher_app.xml
@@ -9,8 +9,8 @@
 
   <ImageView
     android:id="@+id/app_image_icon"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="48dp"
+    android:layout_height="48dp"
     android:layout_gravity="center"
     android:contentDescription="@null" />
 
